fixed ul alignment

--- a/src/components/Resume.module.css
+++ b/src/components/Resume.module.css
@@ -50,10 +50,6 @@ margin-bottom: 2rem;
 
 }
 
-.section_skills li{
-list-style: none;
-text-align: left;
-}
 
 .section_heading{
     text-align: left;
@@ -77,5 +73,15 @@ text-align: left;
 
 .right{
     background-color: #f1f3f9;
-
 }
+
+.right .section_title{
+    color:#5a7684
+}
+
+.section_skills ul{
+    list-style: none;
+    text-align: left;
+    padding-left: 0!important;
+    }
+    
